--- a/templates/index.html
+++ b/templates/index.html
@@ -708,6 +708,8 @@ function googleTranslateElementInit() {
 
 <script>
   var alanBtnInstance = alanBtn({
+	  left: "30px",
+          bottom: "15px",
     key: "5781a62e1657df072c59ae183d3c46982e956eca572e1d8b807a3e2338fdd0dc/stage",
     
 
